hero and about area

--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
     <link rel="stylesheet" href="style.css">
     <title>Food Network</title>
 </head>
+
 <body>
-    
+    <!-- Hero Area Start -->
+
+    <section class="hero-area">
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a href="https://www.foodpanda.com.bd/" class="order-btn" target="_blank">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="img">
+        </div>
+    </section>
+
+    <!-- Hero Area End -->
+
+    <!-- About Area Start -->
+
+    <section class="about-area">
+        <div id="about-person-img" class="half-width">
+            <img src="images/female/Person Image.png" alt="img">
+        </div>
+        <div id="about-person-content" class="half-width">
+            <h1>About Me</h1>
+            <p>Hi, I am luna. I like fitness and healthy life. I am trying to maintain my food habit. By eating healthy food network I maintain my helthy life. If you want a helthy life you can follow me. I will help you with my pleasure. I am a trainer also. So if you interested you can contact me. </p>
+            <a href="https://www.shape.com/weight-loss/tips-plans/7-day-diet-plan-weight-loss" class="contact-btn" target="_blank">Contact Me</a>
+        </div>
+    </section>
+
+    <!-- About Area End -->
 </body>
 </html>
