Blog and footer added

--- a/index.html
+++ b/index.html
@@ -41,5 +41,72 @@
     </section>
 
     <!-- About Area End -->
+
+    <!-- Blog Area Start -->
+
+    <section class="blog-area">
+        <div class="blog-content">
+            <h1>My recipies</h1>
+        <p>For those who think that being on a diet is all about giving up on all the deliciousness in life, we have put together some of the easiest, simplest and yummiest of preparations that will make dieting and healthy eating loads of fun.</p>
+        </div>
+        <div class="blog-items">
+            <div class="single-blog-item">
+                <div class="single-blog-img">
+                    <img src="images/food/Project Cover.jpg" alt="">
+                </div>
+                <div class="single-blog-content">
+                    <h2>Egg Recipie</h2>
+                    <p>When you're trying to eat healthy, eggs are an awesome go-to for breakfast, lunch, dinner, or even as just a snack. The key is to use the eggs in a variety of different ways by adding spices or seasonings and pairing them with loads of wholesome vegetables and grains.</p>
+                </div>
+            </div>
+            <div class="single-blog-item">
+                <div class="single-blog-img">
+                    <img src="images/food/Project Cover1.jpg" alt="">
+                </div>
+                <div class="single-blog-content">
+                    <h2>Salad Recipe</h2>
+                    <p>Salad recipes are my favorite way to showcase vibrant, in-season produce – fruits and veggies that are so good on their own that you don’t need to do much to make them into a delicious meal.
+                    </p>
+                </div>
+            </div>
+            <div class="single-blog-item">
+                <div class="single-blog-img">
+                    <img src="images/food/Project Cover.png" alt="">
+                </div>
+                <div class="single-blog-content">
+                    <h2>Soup Recipie</h2>
+                    <p>As for specific soup diets, there's currently no scientific evidence on their effectiveness for weight loss. Yet, as most soup diets result in a significant reduction in calories, following them will likely help you lose weight
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Blog Area End -->
+
+    <!-- CounterUp Area Start -->
+    <section class="counter-up-area">
+        <div class="counter-items">
+            <div class="single-counter-item">
+                <h1>700k</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="single-counter-item">
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="single-counter-item">
+                <h1>100k</h1>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+    </section>
+    <!-- CounterUp Area End -->
+
+    <!-- Footer Area Start -->
+    <footer>
+        <h1><span class="orange-color">FOOD</span> NETWORK</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
+    <!-- Footer Area End -->
 </body>
 </html>
