--- a/index.html
+++ b/index.html
@@ -12,9 +12,28 @@
 </head>
 
 <body>
+
+<!-- Nav bar Start -->
+<nav>
+    <div class="logo">
+        <a href="#">Food Network</a>
+    </div>
+    <div class="menu">
+        <ul>
+            <li><a href="#hero-area">Home</a></li>
+            <li><a href="#about-area">About</a></li>
+            <li><a href="#blog-area">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+</nav>
+<!-- Nav bar End -->
+
+
+
     <!-- Hero Area Start -->
 
-    <section class="hero-area">
+    <section class="hero-area" id="hero-area">
         <div class="half-width">
             <h1><span class="orange-color">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
@@ -29,7 +48,7 @@
 
     <!-- About Area Start -->
 
-    <section class="about-area">
+    <section class="about-area" Id="about-area">
         <div id="about-person-img" class="half-width">
             <img src="images/female/Person Image.png" alt="img">
         </div>
@@ -44,7 +63,7 @@
 
     <!-- Blog Area Start -->
 
-    <section class="blog-area">
+    <section class="blog-area" id="blog-area">
         <div class="blog-content">
             <h1>My recipies</h1>
         <p>For those who think that being on a diet is all about giving up on all the deliciousness in life, we have put together some of the easiest, simplest and yummiest of preparations that will make dieting and healthy eating loads of fun.</p>
