--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/shapes/Group 8450.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Food Network</title>
 </head>
@@ -100,9 +101,11 @@
             </div>
         </div>
     </section>
+
     <!-- Blog Area End -->
 
     <!-- CounterUp Area Start -->
+
     <section class="counter-up-area">
         <div class="counter-items">
             <div class="single-counter-item">
@@ -119,13 +122,16 @@
             </div>
         </div>
     </section>
+
     <!-- CounterUp Area End -->
 
     <!-- Footer Area Start -->
+
     <footer>
         <h1><span class="orange-color">FOOD</span> NETWORK</h1>
         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
     </footer>
+
     <!-- Footer Area End -->
 </body>
 </html>
